--- a/q.html
+++ b/q.html
@@ -28,6 +28,6 @@
     </tr>
   
 </table>
-<a href="https://gitlocalize.com/repo/6943/whole_project?utm_source=badge"> <img src="https://gitlocalize.com/repo/6943/whole_project/badge.svg" /> </a>
+<a href="https://gitlocalize.com/repo/6943/es?utm_source=badge"> <img src="https://gitlocalize.com/repo/6943/es/badge.svg" /> </a>
  </body>
 </html>
